<resources>
    <string name="app_name">GolfcourseB</string>
    <string name="courseTitle">Welcome To the Golfcourse App</string>
    <string name="courseSubtitle">Type of course</string>
    <string name="courseButton">Create</string>
    <string name="links">Links</string>
    <string name="parkland">Parkland</string>
    <string name="stadium">Stadium</string>
    <string name="sandbelt">Sandbelt </string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$%d</string>
    <string name="playedTitle">Golfcourses Played</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_course">Course</string>
    <string name="action_played">Played</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">GolfcourseB</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">About Golfcourse App</string>
    <string name="aboutus_message">Hello,\n this is my golfcourse app\n Users can enter in details\n about the courses theyve played</string>

    <string name="golfcoursesNotFound">No Golfcourses Yet…\nGo Make a Golfcourse!</string>
    <string name="golfcourseError">Error : Couldn\'t Make a Golfcourse…</string>
    <string name="golfcourseDetails">Golfcourse Details</string>
    <string name="hint_golfcourseName">Course Name :</string>
    <string name="amt">Amount :</string>
    <string name="type">Type :</string>
    <string name="description">Description :</string>
    <string name="datePlayed">Date Played :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="messageLoading">Please Wait while the Golfcourses are Loading...</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="action_location">Location</string>

    <string name="select_profile_image">Select Profile Image</string>
    <string name="hint_golfcourseStart">Welcome To The Golf Course App </string>
</resources>